--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <h1>ランダム名前生成器</h1>
+  <h1>ランダム名前生成機械</h1>
   <button onclick="showRandomName()">名前を表示</button>
   <div id="result"></div>
 
