--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
   <div id="result"></div>
 
   <script>
-    const names = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠"];
-    const names = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "陵"];
-
-
+    const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠"];
+    const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "陵"];
+    const names3 = ["学園", "学院", "館", "実業", "義塾", "大附", ""];
+    
     function showRandomName() {
-      const randomIndex1 = Math.floor(Math.random() * names.length);
-      const randomIndex2 = Math.floor(Math.random() * names.length);
-      const randomIndex3 = Math.floor(Math.random() * names.length);
-      const name = names[randomIndex];
+      const randomIndex1 = Math.floor(Math.random() * names1.length);
+      const randomIndex2 = Math.floor(Math.random() * names2.length);
+      const randomIndex3 = Math.floor(Math.random() * names3.length);
+      const name1 = names1[randomIndex1];
+      const name2 = names2[randomIndex2];
+      const name3 = names3[randomIndex3];
 
-      document.getElementById("result").textContent = name;
+      document.getElementById("result").textContent = name1 & name2 & name3 ;
     }
   </script>
 </body>
