--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ランダム名前生成</title>
+  <title>架空私立強豪校生成メーカー</title>
   <style>
     body {
       font-family: sans-serif;
@@ -39,7 +39,7 @@
       const name2 = names2[randomIndex2];
       const name3 = names3[randomIndex3];
 
-      document.getElementById("result").textContent = name1 & name2 & name3 ;
+      document.getElementById("result").textContent = name1 + name2 + name3 ;
     }
   </script>
 </body>
