--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 <body>
   <h1>架空私立強豪校<br>生成メーカー</h1>
   <button onclick="showRandomName()">学校名を生成</button>
+  <h1>初戦で</h1>
   <div id="result"></div>
-
+  <h1>とだけは当たりたくないな・・・</h1>
+  
   <script>
     const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠"];
     const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "陵"];
