--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       padding: 10px 20px;
     }
     #result {
-      margin-top: 30px;
-      font-size: 2rem;
-      color: #333;
+  margin-top: 30px;
+  font-size: 2rem;
+  color: #333;
+  font-family: "Hiragino Mincho ProN", "游明朝", "YuMincho", "MS P明朝", serif;
+  font-weight: bold;
     }
   </style>
 </head>
@@ -27,9 +29,9 @@
   <div id="result"></div>
   
   <script>
-    const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠"];
-    const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "陵"];
-    const names3 = ["学園", "学院", "館", "実業", "義塾", "大附", ""];
+    const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄"];
+    const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄", "陵"];
+    const names3 = ["学園", "学院", "館", "実業", "義塾", "大附", "高校"];
     
     function showRandomName() {
       const name1 = names1[Math.floor(Math.random() * names1.length)];
