--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <div id="result"></div>
   
   <script>
-    const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄", "堂"];
-    const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "和", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄", "堂", "陵"];
+    const names1 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄", "堂", "海"];
+    const names2 = ["桐", "光", "星", "聖", "慶", "徳", "望", "東", "成", "王", "帝", "明", "陽", "洋", "城", "秀", "正", "翔", "英", "清", "北", "西", "新", "泉", "常", "青", "京", "誠", "栄", "堂", "海", "和", "陵"];
     const names3 = ["学園", "学院", "館", "実業", "義塾", "大附", "高校"];
     
     function showRandomName() {
